--- a/css/style.scss
+++ b/css/style.scss
@@ -119,6 +119,7 @@ $font-color1: #4B5D68;
     .ul1-class{
         .btn-nav{
             .nav-btn{
+                padding: 15px 25px;
                 background: #FFFFFF;
                 box-shadow: 0px 5px 5px rgba(75, 93, 104, 0.1) ;
                 border-radius: 50px;
